--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.2.1",
+    "ajv": "^8.17.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mongoose": "^8.19.2",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stream-json": "^1.9.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
