--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
     "ajv": "^8.17.1",
+    "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^17.2.3",
+    "joi": "^18.0.1",
     "mongoose": "^8.19.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
