--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@bull-board/api": "^6.14.0",
+    "@bull-board/express": "^6.14.0",
+    "@bull-board/nestjs": "^6.14.0",
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/bull": "^11.0.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^11.0.3",
@@ -29,6 +33,7 @@
     "@nestjs/swagger": "^11.2.1",
     "ajv": "^8.17.1",
     "axios": "^1.12.2",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
