updated the env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-PORT = 7000
-NODE_ENV =  dev
-BASE_URL = http://localhost:7000
+PORT=7100
+NODE_ENV=dev
+BASE_URL=http://localhost:7100
 
-DB_URL = mongodb://localhost:27017/injester-service
+DB_URL=mongodb://admin:12345@mongodb:27017/injester-service-database?authSource=admin
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+AUTO_WIDEN_ON_TYPE_ERRORS=true
+
+SOURCE_URLS=https://buenro-tech-assessment-materials.s3.eu-north-1.amazonaws.com/structured_generated_data.json,https://buenro-tech-assessment-materials.s3.eu-north-1.amazonaws.com/large_generated_data.json
